Week3 with one component to Update&Create

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://nechamim.github.io/houzz-project",
-  "name": "my-app",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8080",
